# image-coord

./: .gitignore  CMakeLists.txt  HotspotItem.cpp  HotspotItem.h  ImageMapEditor.cpp  ImageMapEditor.h  MainWindow.cpp  MainWindow.h  README.md  app.rc  installer.iss  main.cpp  resources.qrc
